--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:palette-v7:26.1.0'
+    compile 'com.google.android.exoplayer:exoplayer-ui:2.6.1'
+    compile 'com.google.android.exoplayer:exoplayer-core:2.6.1'
 }
